# SolidVoice-Voice-Enabled-Parametric-Modelling-in-SolidWorks

./: .gitignore  CONTRIBUTING.md  README.md  config.ini  part_memory.py  requirements.txt  solidworks_sketch.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
pySldWrap/: sw_tools.py
ui/: Cargo.toml  build.rs
ui/src/: app.rs  backend.rs  main.rs  theme.rs
ui/src/widgets/: feature_tree.rs  history.rs  mod.rs  status_bar.rs  voice_panel.rs
