[package]
name = "solidworks-voice-ai"
version = "0.1.0"
edition = "2021"
authors = ["dawarazhar11"]
description = "Native Windows desktop UI for SolidWorks Voice AI"
license = "MIT"
repository = "https://github.com/dawarazhar11/solidworks-voice-ai"

[[bin]]
name = "solidworks-voice-ai"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
